internal/provider/kubernetes/config/samples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
